--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!doctype html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Three.js avec GLTF</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OFLYN - HERO</title>
   <style>
     body,
     html {
@@ -23,7 +25,10 @@
 </head>
 
 <body>
-  <script src="src/main.js" asynch type="module"></script>
+  <div id="app"></div>
+  <script type="module" src="/src/SceneManager.js"></script>
 </body>
 
 </html>
+<!DOCTYPE html>
+<html>
